syntax = "proto3";

package login;

option go_package = "/pkg";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

service LoginService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
}


message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    bool success = 1;
}

message GetUserInfoRequest {
    string username = 1;
}

message GetUserInfoResponse {
    int32 id = 1;
    string username = 2;
    string createAt = 3;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}